fixed some grid sizing issues on smaller screens

--- a/css/module-b.css
+++ b/css/module-b.css
@@ -128,10 +128,7 @@
 .skill-row {
   margin-top: 150px; }
 
-.jquery-logo {
-  margin-top: 60px; }
-
-.node-sass-margin-top {
+.node-sass-jquery-margin-top {
   margin-top: 50px;  }
 
 .mongo-margin-top {
